// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClinicalResult should pass certain props to Observation  1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    eventId="111"
    hasComment={false}
    hideAccessoryDisplays={false}
    hideUnit={true}
    interpretation="critical"
    isModified={false}
    isTruncated={false}
    isUnverified={false}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a NoData if hasResultNoData is true 1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <InjectIntl(KnownNoData) />
</div>
`;

exports[`ClinicalResult should render a ResultError if hasResultError is true 1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <InjectIntl(ResultError) />
</div>
`;

exports[`ClinicalResult should render a commented result  1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    eventId="111"
    hasComment={true}
    hideAccessoryDisplays={false}
    hideUnit={false}
    isModified={false}
    isTruncated={false}
    isUnverified={false}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a default ClinicalResult 1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    eventId="111"
    hasComment={false}
    hideAccessoryDisplays={false}
    hideUnit={false}
    isModified={false}
    isTruncated={false}
    isUnverified={false}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a entered-in-error status result 1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    eventId="111"
    hasComment={false}
    hideAccessoryDisplays={false}
    hideUnit={false}
    interpretation="critical"
    isModified={false}
    isTruncated={false}
    isUnverified={false}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
    status="entered-in-error"
  />
</div>
`;

exports[`ClinicalResult should render a modified result  1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    eventId="111"
    hasComment={false}
    hideAccessoryDisplays={false}
    hideUnit={false}
    isModified={true}
    isTruncated={false}
    isUnverified={false}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a result with a concept display 1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    conceptDisplay="Temperature Oral"
    eventId="111"
    hasComment={false}
    hideAccessoryDisplays={false}
    hideUnit={false}
    isModified={false}
    isTruncated={false}
    isUnverified={false}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a result with a date time display 1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    datetimeDisplay="Nov 23, 2019 13:31:31"
    eventId="111"
    hasComment={false}
    hideAccessoryDisplays={false}
    hideUnit={false}
    isModified={false}
    isTruncated={false}
    isUnverified={false}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a result with unit hidden 1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    eventId="111"
    hasComment={false}
    hideAccessoryDisplays={false}
    hideUnit={true}
    isModified={false}
    isTruncated={false}
    isUnverified={false}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a truncated ClinicalResult 1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    eventId="111"
    hasComment={false}
    hideAccessoryDisplays={false}
    hideUnit={false}
    isModified={false}
    isTruncated={true}
    isUnverified={false}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a truncated ClinicalResult with icons moved 1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    eventId="111"
    hasComment={false}
    hideAccessoryDisplays={false}
    hideUnit={false}
    isModified={true}
    isTruncated={true}
    isUnverified={false}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render an unverified result  1`] = `
<div
  className="clinical-result"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <ClinicalResultDisplay
    eventId="111"
    hasComment={false}
    hideAccessoryDisplays={false}
    hideUnit={false}
    isModified={false}
    isTruncated={false}
    isUnverified={true}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;
